external/nosher2.css
/* ... */
@media (prefers-color-scheme: dark)  {
    :root {
        forced-color-adjust: none;
        --main: #111;
        --text: #eee;
        --header: #444;
        --link-hover: #555;
        --link: #ccc;
        --link_v: #bbb;
        --nav-bg: #222;
        --navlink: #ccc;
        --sidebar-bg: #333;
        --headers: rgb(75, 123, 187);
        --hgradf: rgb(75, 123, 187);
        --hgradto: rgb(188, 203, 228);
        --headers2: rgb(149, 174, 207);
        --headers4: rgb(183, 203, 229);
        --quote: #bbb;
        --poem: #abe;
        --desc: #aaa;
        --extra: #444;
        --extra_text: #eee;
        --box_shadow: #333;
        --pad: 8px;
        --inset: 12px;
    }
    body {
        background-image: unset !important;
    }
    .homegriditem {
        background-color: #323232 !important;
    }
    .intro {
        color: #eee !important;
    }
    p,
    p.navlink, 
    p.navlink a, 
    p.navlink,
    li, 
    a:visited, 
    a:link > *,
    nav ul li, 
    nav ul li a, 
    nav ul li a:hover,
    nav ul li a:link,
    nav ul li a:visited,
    .catalogue li,
    .sort,
    .sort i,
    .sort a,
    .sort a:visited,
    .scales,
    article.thumb p,
    article.thumb p a,
    .adthumb,
    archivedescription .summary,
    archivedescription .year,
    .advert,
    intro-,
    serve-
    {
        color: var(--text);
    }
    p.title, p.quote {
        color: #ddd !important;
    }
    .updated, .copy, .adthumb_dim {
        color: #ddd !important;
    }
    .extra, .extra_left, .extra > a, .extra > a:visited {
        background-color: var(--extra) !important;
        color: var(--extra_text) !important;
    }
    .extra p, .extra_left p {
        color: var(--extra_text) !important;
    }
    diet- {
        color: #0f0 !important;
    }
    .letter, .letter > * {
        color: #222 !important;
        font-weight: bold;
    }
}
@font-face {
    font-family: 'Roboto-Light';
    src: url(https://static.nosher.net/fonts/Roboto-Light.woff2) format('woff2');
    font-display: swap;
}

@font-face {
    font-family: 'charterregular';
    src: url('https://static.nosher.net/fonts/charter_regular-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;
    font-display: swap;
}

/* Primary properties */

body, main, content {
    background-color: var(--main);
}

a {
    color: var(--link);
    text-decoration: none;
}

a:link, a:hover {
    color: var(--link);
}

a:visited {
    color: var(--link_v)
}

a:hover {
    text-decoration: underline;
}

br {
    clear:left;
}

/* Horizontal rule */

hr {
    border: 0px;
    border-top: 1px solid #808080;
}

/* Headings */

h1 {
    display: inline-block;
    font-family: "Roboto-Light", sans-serif;
    text-shadow: rgba(30, 30, 30, 0.2) 3px 2px 3px;
    color: #0000;
    margin: 4px 12px 20px 0;
    font-size: 200%;
    text-align: left;
    background-image: linear-gradient(40deg, var(--hgradf), var(--hgradto));
    background-clip: text;
}

h2, h3 {
    font-family: "Roboto-Light", sans-serif;
    color: var(--headers2);
    margin: 22px 0 12px 0;
    font-size: 160%;
    width: 95%;
    text-align: left;
}

h3 {
    font-family: "Roboto-Light", sans-serif;
    font-size: 140%;
    margin: 22px 0 12px 0;
}

@media screen and (max-width: 1000px) {
    h1 {
        display: block;
        margin: 0 0 12px 0;
        font-size: 120%;
        padding: 8px;
        border-radius: 0;
        width: 100vw;
        box-sizing: border-box;
    }
    h2 {
        font-size: 120%;
        margin-left: 8px;
        width: 97%;
    }
    h3 {
        display: block;
        width: 95% !important;
        text-align: left;
        font-size: 110%;
        margin-left: 8px !important;
    }
}

p {
    margin: 0 0.75em 0.75em 0;
    line-height: 1.5;
}

@media screen and (max-width: 1000px) {
    p {
        margin: 0 0.75em 0.75em 8px;
    }
}

/* Body */

body {
    font-family: "charterregular", "Georgia", "Times New Roman", serif;
    text-rendering: optimizeLegibility;
    font-weight: 300;
    width: 100vw;
    font-size: 21px;
    color: #333;
    min-height: 100vh;
    margin: 0;
    padding: 0;
    background-image: url("https://static.nosher.net/graphics/bg4.webp");
    overflow-x: hidden;
}

#mainbody {
    overflow-y: scroll !important;
}

@media screen and (max-width: 1000px) {
    body {
        font-size: 11pt;
    }
}

/* Body class */

.body {
    display: grid;
    grid-template-rows: 70px auto 80px;
    grid-template-columns: minmax(280px, 2.0fr) 10fr minmax(240px, 2.0fr);
    grid-template-areas: "header header header" "nav    content    sidebar" "footer  footer  footer";
}

@media screen and (max-width: 1000px) {
    .body {
        display: grid;
        grid-template-columns: auto;
        grid-template-rows: 60px auto auto auto auto 60px;
        grid-template-areas: "header" "navlite" "content" "sidebar" "nav" "footer";
    }
}

/* Home page layout */

#home {
    margin-top: 20px;
    display: grid;
    grid-template-rows: 60px auto 50px;
    grid-template-columns: 2fr 8fr 2fr;
    grid-template-areas: ". header ." ".    content   ." ".    footer    .";
}

@media screen and (max-width: 1000px) {
    #home {
        margin-top: 0;
        display: grid;
        grid-template-columns: 1fr;
        grid-template-rows: auto auto 40px;
        grid-template-areas: "header" "content" "footer";
    }
}

#home>header, header {
    background-color: var(--header);
    font-family: 'Arial', sans-serif;
    color: #fff;
    font-size: 220%;
    text-shadow: 3px 2px 2px #333;
    grid-area: header;
}

#home>header, header {
    width: 100%;
    margin: 0 auto 0 auto;
    padding: 6px 0 0 0;
    text-align: center;
}

#home>content {
    background-color: var(--main);
    grid-area: content;
}

@media screen and (max-width: 1000px) {
    #home>content {
        padding: 0;
    }
}
/* ... */

